# readwise-sqlalchemy

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  note.txt  pyproject.toml  pytest.ini
.github/workflows/: github_workflow.yaml
docs/: api.rst  conf.py  index.rst
readwise_local_plus/: cli.py  config.py  configure_logging.py  db_operations.py  lock_manager.py  main.py  models.py  pipeline.py  schemas.py  types.py  utils.py
readwise_local_plus/integrations/: readwise.py
readwise_sqlalchemy/: __init__.py  cli.py  config.py  configure_logging.py  db_operations.py  designs.py  exp.py  list_invalid_db_objects.py  logger.py  main.py  main_2.py  models.py  pipeline.py  prototype.ipynb  pydantic.py  report_invalid_db_objects.py  schemas.py  sql_alchemy.py  test_main.py  types.py  utils.py
readwise_sqlalchemy/integrations/: readwise.py
tests/: conftest.py  helpers.py  test_config.py  test_db_operations.py  test_main.py  test_models.py  test_pydantic.py  test_schemas.py  test_sql_alchemy.py  test_utils.py
tests/data/: README.md
tests/e2e/: test_main.py  test_main_e2e.py
tests/integration/: test_cli.py  test_db_operations.py  test_lock_integration.py  test_main.py  test_main_int.py  test_sqlalchemy.py
tests/unit/: test_config.py  test_db_operations.py  test_list_invalid_db_objects.py  test_lock_manager.py  test_main.py  test_main_unit.py  test_models.py  test_pipeline.py  test_readwise.py  test_schemas.py  test_utils.py
