[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "readwise-local-plus"
version = "0.1.0"
authors = [
  { name="Chris Billows"},
]
description = "Your Readwise highlights, local and with superpowers"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
    "requests",
    "rich",
    "sqlalchemy",
    "types-requests",
]
[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "sphinx",
]

[project.scripts]
rwlp = "readwise_local_plus.main:main"
readwise-local-plus = "readwise_local_plus.main:main"

[tool.mypy]
# See: https://docs.pydantic.dev/latest/integrations/mypy/
plugins = ['pydantic.mypy']
strict = true


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Standard black settings.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
